# temptations

./: CMakeLists.txt  Compilar_en_LINUX.txt  Complilar_en_LINUX.txt  README.md  limpia.bat
codeblocks/: temptations.cbp
extras/: Temptations_QR.docx  manual_eng.docx  manual_esp.docx
src/: Android.mk  baldosas.cpp  baldosas.h  basePGL.cpp  basePGL.h  baseTMP.cpp  baseTMP.h  control.cpp  control.h  dibuja.cpp  dibuja.h  disparos.cpp  disparos.h  enemigos.cpp  enemigos.h  juego.cpp  juego.h  main.cpp  main.rc  mapa.cpp  mapa.h  monje.cpp  monje.h  musicas.cpp  musicas.h  procesos.cpp  procesos.h  sonidos.cpp  sonidos.h
src/PGL/: PGL.h  PGL_archivo.cpp  PGL_archivo.h  PGL_cabeceras.h  PGL_cadena.cpp  PGL_cadena.h  PGL_color.cpp  PGL_color.h  PGL_compresor.cpp  PGL_compresor.h  PGL_configuracion.h  PGL_contenedor.h  PGL_funciones.cpp  PGL_funciones.h  PGL_imagen.cpp  PGL_imagen.h  PGL_lista.h  PGL_mapa.cpp  PGL_mapa.h  PGL_mapaxml.cpp  PGL_mapaxml.h  PGL_matriz.h  PGL_musica.cpp  PGL_musica.h  PGL_rectangulo.cpp  PGL_rectangulo.h  PGL_sistema.cpp  PGL_sistema.h  PGL_sonido.cpp  PGL_sonido.h  PGL_tabla.h  PGL_tiempo.cpp  PGL_tiempo.h  PGL_ventana.cpp  PGL_ventana.h
temptations-android-project/: AndroidManifest.xml  LEEME.txt  ant.properties  version.txt
temptations-android-project/assets/: LEEME.txt
temptations-android-project/jni/: Application.mk  LEEME.txt
temptations-android-project/res/layout/: main.xml
temptations-android-project/res/values/: strings.xml
temptations-android-project/src/com/pipagerardo/temptations/: Temptations.java
(+1 files in other folders)
