cmake_minimum_required (VERSION 2.8.11)
project (TEMPTATIONS)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)
PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2MIXER_INCLUDE_DIR} src/PGL)

AUX_SOURCE_DIRECTORY(src SRCS)
AUX_SOURCE_DIRECTORY(src/PGL SRCS)

add_executable (temptations ${SRCS})
TARGET_LINK_LIBRARIES(temptations ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2MIXER_LIBRARIES} z)
ADD_DEFINITIONS(-DPGL_LINUX)